--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,14 +10,14 @@
     <h1>Log in</h1>
     <img src="./assets/img/icon_line.png" class="line">
     <div class='user-input'>
-        <input [(ngModel)]="user.email" placeholder="Your Email" formControlName="email" />
+        <input placeholder="Your Email" formControlName="email" />
         <div *ngIf="form.controls['email'].invalid && form.controls['email'].touched">
             <div class="error-massage" *ngIf="form.controls['email'].errors?.['required']">Email is required.</div>
         </div>
         <img src="./assets/img/icon_mail.png"/>
     </div>
     <div class="user-input">
-        <input [(ngModel)]="user.password" placeholder="Your Password" formControlName="password" />
+        <input placeholder="Your Password" formControlName="password" />
         <div *ngIf="form.controls['password'].invalid && form.controls['password'].touched">
             <div class="error-massage" *ngIf="form.controls['password'].errors?.['required']">Password is required.
             </div>
