--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -500,12 +500,11 @@ form input::placeholder {
 }
 
 .popup-container {
-    
     width: 80%;
     height: 800px;
     background-color: white;
     border-radius: 25px;
-    box-shadow: 2px 11px 7px -6px #afafaf;
+    /* box-shadow: 2px 11px 7px -6px #afafaf; */
     padding: 50px;
     overflow-y: auto;
     overflow-x: hidden;
