--- a/src/app/add-task/add-task.component.scss
+++ b/src/app/add-task/add-task.component.scss
@@ -229,9 +229,14 @@ textarea:focus {
     box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 20%);
 }
 
+.subtasks {
+    display: flex;
+    flex-direction: row;
+}
+
 .category,
 .contact,
-.subtasks {
+.subtask {
     cursor: pointer;
     font-size: 1.2rem;
     display: flex;
@@ -316,6 +321,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 /* prio container */
+
 .prio {
     display: flex;
     justify-content: space-between;
@@ -457,7 +463,7 @@ input[type="checkbox"]:checked::before {
 .subtask-oninput {
     display: flex;
     align-items: center;
-    position: absolute;
+    position: relative;
     top: 38%;
     right: 20px;
 }
@@ -478,7 +484,6 @@ input[type="checkbox"]:checked::before {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 7px 0;
 }
 
 .category img {
